logo issue on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,5 +31,4 @@
   padding: 0.5 0;
   font-size: 3rem;
   width: 100%;
-  height: 100%;
 }
